# argo2id-wasm

./: .gitignore  LICENSE  README.md  aa  env.example  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
devfiles/: clean.sh
src/: index.ts
wasm/: Cargo.toml  patch.js
wasm/src/: lib.rs
wasm/tests/: integration.rs
