[package]
name = "argon2id-wasm"
version = "0.1.0"
edition = "2024"
description = "argon2id wasm"
repository = "https://github.com/zzci/argon2id"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.27"
argon2 = { version = "0.5.3", features = ["std"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
getrandom = { version = "0.2.16", features = ["js"] }
rand_core = { version = "0.9.3", features = ["std"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
